# x-disciplined

./: CODEOWNERS  README.md  manage.py  pyproject.toml  requirement.txt
disciplined/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
tasks/: models.py  serializers.py  tasks.py  urls.py  utils.py  views.py
tasks/migrations/: 0001_initial.py
users/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_users_timezone.py
